--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,13 +2,14 @@
 
 S3method(plot,ROOT)
 S3method(plot,characterizing_underrep)
-S3method(print,ROOT)
-S3method(print,characterizing_underrep)
 S3method(summary,ROOT)
 S3method(summary,characterizing_underrep)
 export(ROOT)
 export(characterizing_underrep)
 export(get_data)
+export(loss_from_objective)
+export(objective_default)
+export(objective_if)
 importFrom(graphics,legend)
 importFrom(graphics,par)
 importFrom(rpart.plot,prp)
